package com.badbarghest.Dessin;

import java.util.Iterator;

public interface IDessin {
    public Iterator createIterator();
    public String getNom();
}
